2007-09-30  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/baseweb.py (WebStatus.setupSite): ugh, yes
	auto-create an empty public_html directory, otherwise we get
	internal server errors instead of 404s.

	* README: reference buildbot.net, remove CVSToys section (does
	anyone still use it?)

	* buildbot/status/web/baseweb.py (WebStatus): emit a useful log
	message when public_html/ is missing (indicating that you should
	probably run 'upgrade-master'), and don't auto-create an empty
	directory in that case.

	* contrib/darcs_buildbot.py: refactor internals a bit, make it
	possible to use as an importable module (to make it easier to
	write some unit tests for it)

	* buildbot/status/web/baseweb.py (Waterfall.__init__): add a
	DeprecationWarning for Waterfall, advising users to switch over to
	WebStatus instead.

	* NEWS: update with user-visible changes since the last release

	* buildbot/status/web/waterfall.py
	(WaterfallStatusResource.get_reload_time): if the suggest a
	reload time of less than 15 seconds, give them 15 seconds instead
	of ignoring their request entirely, because that'd be confusing.

	* buildbot/steps/source.py (Mercurial.computeSourceRevision): log a
	warning if we must invoke the last-change-is-most-recent guess

	* buildbot/status/web/baseweb.py (Waterfall.__init__): if an old
	Waterfall is running in an upgraded master (which is the usual
	case for folks who have followed the instructions to run
	'upgrade-master' but who have not yet resolved all the
	DeprecationWarnings), prefer the buildbot.css from public_html/
	rather than the one passed in on the buildbot= argument.
	Otherwise, the resulting pages don't quite use CSS right..
	sometimes it works, sometimes it doesn't, and I don't know why.
	Sites that are using custom CSS will see the default CSS until
	they modify public_html/buildbot.css to include their
	customizations.

	* docs/buildbot.texinfo (WebStatus): explain robots.txt a bit more